Refactor: Scheduler 피드백 반영 및 주석 정리