@@ -1,9 +1,11 @@
 package org.example.scheduler.service;
 
 import lombok.RequiredArgsConstructor;
+import org.example.scheduler.dto.comment.CommentResponseDto;
 import org.example.scheduler.dto.schedule.ScheduleRequestDto;
 import org.example.scheduler.dto.schedule.ScheduleResponseDto;
 import org.example.scheduler.dto.schedule.ScheduleUpdateRequestDto;
+import org.example.scheduler.dto.schedule.ScheduleWithCommentsResponseDto;
 import org.example.scheduler.entity.Schedule;
 import org.example.scheduler.entity.User;
 import org.example.scheduler.error.CustomException;
@@ -14,9 +16,7 @@ import org.example.scheduler.repository.UserRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * 일정 관련 비즈니스 로직을 처리하는 서비스
@@ -44,7 +44,7 @@ public class ScheduleService {
 
         scheduleRepository.save(schedule);
 
-        return new ScheduleResponseDto(schedule);
+        return ScheduleResponseDto.from(schedule);
     }
 
     /**
@@ -54,71 +54,57 @@ public class ScheduleService {
      */
     @Transactional(readOnly = true)
     public List<ScheduleResponseDto> getAllSchedules(){
-        return scheduleRepository.findAll() // 최신 수정일 기준 내림차순 정렬
+        return scheduleRepository.findAllByOrderByModifiedAtDesc()
                 .stream()
-                .sorted(Comparator.comparing(Schedule::getModifiedAt).reversed())
-                .map(ScheduleResponseDto::new)
-                .collect(Collectors.toList());
+                .map(ScheduleResponseDto::from)
+                .toList();
     }
 
-//    /**
-//     * 작성자명으로 일정 조회
-//     *
-//     * @param userId 유저 ID
-//     * @return 특정 작성자의 일정 목록 응답 DTO (최신 수정일 순 정렬)
-//     */
-//    @Transactional(readOnly = true)
-//    public List<ScheduleResponseDto> getSchedulesByUserId(Long userId) {
-//        return scheduleRepository.findByUserIdOrderByModifiedAtDesc(userId) // 최신 수정일 기준 내림차순 정렬
-//                .stream()
-//                .map(ScheduleResponseDto::new)
-//                .collect(Collectors.toList());
-//    }
-
-//    /**
-//     * 특정 일정 및 댓글 조회
-//     *
-//     * @param id 일정 ID
-//     * @return 특정 일정 + 댓글 목록 응답 DTO (최신 수정일 순 정렬)
-//     */
-//    @Transactional(readOnly = true)
-//    public ScheduleWithCommentsResponseDto getScheduleWithCommentsById(Long id) {
-//        Schedule schedule = getScheduleOrThrow(id, "조회");
-//
-//        List<CommentResponseDto> comments = commentRepository.findByScheduleId(id) // 최신 수정일 기준 내림차순 정렬
-//                .stream()
-//                .sorted(Comparator.comparing(Comment::getModifiedAt).reversed())
-//                .map(CommentResponseDto::new)
-//                .collect(Collectors.toList());
-//
-//        return new ScheduleWithCommentsResponseDto(new ScheduleResponseDto(schedule), comments);
-//    }
+    /**
+     * 작성자명으로 일정 조회
+    *
+     * @param userId 유저 ID
+     * @return 특정 작성자의 일정 목록 응답 DTO (최신 수정일 순 정렬)
+     */
+    @Transactional(readOnly = true)
+    public List<ScheduleResponseDto> getSchedulesByUserId(Long userId) {
+        return scheduleRepository.findByUserIdOrderByModifiedAtDesc(userId) // 최신 수정일 기준 내림차순 정렬
+                .stream()
+                .map(ScheduleResponseDto::from)
+                .toList();
+    }
 
     /**
-     * 특정 일정 조회
+     * 특정 일정 및 댓글 조회
      *
      * @param scheduleId 일정 ID
      * @return 특정 일정 + 댓글 목록 응답 DTO (최신 수정일 순 정렬)
      */
     @Transactional(readOnly = true)
-    public ScheduleResponseDto getScheduleById(Long scheduleId) {
+    public ScheduleWithCommentsResponseDto getScheduleWithCommentsById(Long scheduleId) {
         Schedule schedule = scheduleRepository.findByIdOrElseThrow(scheduleId);
-        return new ScheduleResponseDto(schedule);
+
+        List<CommentResponseDto> comments = commentRepository.findByScheduleIdOrderByModifiedAtDesc(scheduleId) // 최신 수정일 기준 내림차순 정렬
+                .stream()
+                .map(CommentResponseDto::from)
+                .toList();
+
+        return ScheduleWithCommentsResponseDto.of(ScheduleResponseDto.from(schedule), comments);
     }
 
     /**
      * 특정 일정 수정
      *
      * @param scheduleId 일정 ID
+     * @param sessionUserId 세션 유저 ID
      * @param scheduleUpdateRequestDto 일정 수정 요청 데이터
      * @return 수정된 일정 정보 응답 DTO
      */
     @Transactional
     public ScheduleResponseDto updateSchedule(Long scheduleId, Long sessionUserId, ScheduleUpdateRequestDto scheduleUpdateRequestDto) {
-        //validateScheduleUpdateRequest(scheduleUpdateRequestDto, "수정");
         Schedule schedule = scheduleRepository.findByIdOrElseThrow(scheduleId);
+
         if(!schedule.getUser().getId().equals(sessionUserId)){
-            //throw new ResponseStatusException(HttpStatus.FORBIDDEN, "본인이 작성한 일정만 수정할 수 있습니다.");
             throw new CustomException(ErrorCode.FORBIDDEN_NOT_OWNER, "본인이 작성한 일정만 수정할 수 있습니다.");
         }
 
@@ -130,8 +116,7 @@ public class ScheduleService {
             schedule.updateContent(scheduleUpdateRequestDto.getContent());
         }
 
-        scheduleRepository.flush(); // 반환 schedule에 modifiedAt 반영되도록 flush
-        return new ScheduleResponseDto(schedule);
+        return ScheduleResponseDto.from(schedule);
     }
 
     /**
@@ -143,12 +128,12 @@ public class ScheduleService {
     public void deleteSchedule(Long scheduleId, Long sessionUserId) {
 
         Schedule schedule = scheduleRepository.findByIdOrElseThrow(scheduleId);
+
         if(!schedule.getUser().getId().equals(sessionUserId)){
-            //throw new ResponseStatusException(HttpStatus.FORBIDDEN, "본인이 작성한 일정만 삭제할 수 있습니다.");
             throw new CustomException(ErrorCode.FORBIDDEN_NOT_OWNER, "본인이 작성한 일정만 삭제할 수 있습니다.");
         }
 
-        commentRepository.deleteByScheduleId(scheduleId);
+        commentRepository.deleteByScheduleId(scheduleId); // 해당 일정의 댓글 먼저 삭제 (단방향 연관관계)
         scheduleRepository.delete(schedule);
     }
 }
